HW 11 sprint